--- a/css/styles.css
+++ b/css/styles.css
@@ -188,7 +188,8 @@ ul {
   text-transform: uppercase;
   margin-bottom: 30px;
 }
-.hero-button {
+.hero-button,
+.form-button {
   display: block;
   width: 200px;
   height: 50px;
@@ -557,6 +558,7 @@ ul {
   position: absolute;
   top: 50%;
   left: 50%;
+  padding: 40px;
 
   min-width: 528px;
   min-height: 581px;
@@ -579,3 +581,110 @@ ul {
 .modal-button .icon {
   display: block;
 }
+.form-modal {
+}
+.form-title {
+  margin-bottom: 30px;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+}
+.form-field {
+  position: relative;
+  display: flex;
+  margin-bottom: 28px;
+}
+.form-input {
+  width: 448px;
+  height: 40px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  cursor: pointer;
+}
+.form-label {
+  position: absolute;
+  top: -18px;
+  left: 0;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  cursor: pointer;
+}
+.form-field .icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+.form-input.comments {
+  height: 120px;
+  padding: 12px 16px;
+  resize: none;
+}
+.form-field.comments{
+  margin-bottom: 20px;
+}
+.form-field:focus-within > .icon {
+  fill: var(--accent-color);
+}
+.form-field:focus-within > .form-input {
+  border-color: var(--accent-color);
+  outline: none;
+}
+.form-button {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+.form-label-checkbox, .checkbox-link{
+  padding-left: 24px;
+  font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+
+}
+.checkbox-link{
+  display: inline;
+  text-decoration-line: underline;
+  color: var(--accent-color);
+  margin: 0;
+  padding: 0; 
+}
+.icon-unchecked {
+  position: absolute;
+  top: 50%;
+  
+  transform: translateY(-50%);
+  width: 16px;
+  height: 15px;
+  margin-right: 5px;
+  border: 2px solid #2a2a2a;
+  border-radius: 2px;
+  background: #ffffff;
+}
+.icon-checked{
+  position: absolute;
+  top: 50%;
+  
+  transform: translateY(-50%);
+}
+.form-checkbox:checked ~ .icon-unchecked{
+  background: transparent;
+  border: transparent;
+}
+.form-field.checkbox{
+padding-left:12px; 
+  margin-bottom: 30px;
+}
+.form-checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
